Completed the clints and testimonials and now only remain the header

--- a/Index.html
+++ b/Index.html
@@ -131,6 +131,12 @@
                     <h3 class="news-header-text">
                         Latest News
                     </h3>
+                    <div class="news">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum dolore sunt cum provident placeat aspernatur quae consequatur quos error doloribus, dolores explicabo eos ducimus aliquid nostrum similique, reprehenderit inventore vero.</p>
+                    </div>
+                    <div class="news">
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam labore ipsam accusantium fuga odio saepe minima! Quibusdam voluptatem tempora numquam architecto, laboriosam reiciendis. Porro nobis numquam incidunt tempore similique quibusdam!</P>
+                    </div>
                 </div>
                 <div class="news-content">
 
@@ -145,11 +151,10 @@
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem molestias beatae soluta voluptate quos quam sapiente nihil perferendis consequatur nam! Cupiditate est voluptatum esse possimus, unde expedita? Ut, consequuntur cum.
                     </div>
                     <div class="testimonial-author">
-                        <img src="#" alt="Testionial author">
-                        <h3 class='testimonials-author-name'>Name</h3>
-                        <p class="testimonials-author-info">
-                            some information...
-                        </p>
+                        <img src="man.jpg" alt="Testionial author">
+                        <h3 class='testimonials-author-name'>Dimitri Ivankov
+                            <p>Company head</p>
+                        </h3>
                     </div>
                 </div>
             </div>
@@ -157,30 +162,15 @@
 
         <!-- our team -->
         <div class="teams-section">
-            <div class="teams-section-header">
-                <h3 class="teams-section-header-text">
-                    Our Team
-                </h3>
-            </div>
-            <div class="teams-content">
-                <div class="team-member">
-                   <img src="#" alt="Team member image">
-                   <div class="team-member-name">
-                       <h4 class="team-member-name-text">Name</h4>
-                       <p class="team-member-position">Attorney</p>
-                   </div>
-                   <div class="team-member-content">
-                       <div class="team-member-message">
-                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat beatae ipsa nemo quis explicabo natus asperiores atque, libero a assumenda voluptates..
-                       </div>
-                       <div class="team-member-button">
-                           <button class="team-member-profile-button">Profile</button>
-                       </div>
-                   </div>
+            <div class="inner-container">
+                <div class="teams-section-header">
+                    <h3 class="teams-section-header-text">
+                        Our Team
+                    </h3>
                 </div>
-                <div class="team-member">
+                <div class="teams-content">
                     <div class="team-member">
-                        <img src="#" alt="Team member image">
+                        <img src="man2.jpg" alt="Team member image">
                         <div class="team-member-name">
                             <h4 class="team-member-name-text">Name</h4>
                             <p class="team-member-position">Attorney</p>
@@ -193,64 +183,80 @@
                                 <button class="team-member-profile-button">Profile</button>
                             </div>
                         </div>
-                </div>
-                <div class="team-member">
+                    </div>
                     <div class="team-member">
-                        <img src="#" alt="Team member image">
-                        <div class="team-member-name">
-                            <h4 class="team-member-name-text">Name</h4>
-                            <p class="team-member-position">Attorney</p>
-                        </div>
-                        <div class="team-member-content">
-                            <div class="team-member-message">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat beatae ipsa nemo quis explicabo natus asperiores atque, libero a assumenda voluptates..
+                            <img src="man2.jpg" alt="Team member image">
+                            <div class="team-member-name">
+                                <h4 class="team-member-name-text">Name</h4>
+                                <p class="team-member-position">Attorney</p>
                             </div>
-                            <div class="team-member-button">
-                                <button class="team-member-profile-button">Profile</button>
+                            <div class="team-member-content">
+                                <div class="team-member-message">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat beatae ipsa nemo quis explicabo natus asperiores atque, libero a assumenda voluptates..
+                                </div>
+                                <div class="team-member-button">
+                                    <button class="team-member-profile-button">Profile</button>
+                                </div>
                             </div>
-                        </div>
-                </div>
-                <div class="team-member">
+                    </div>
                     <div class="team-member">
-                   <img src="#" alt="Team member image">
-                   <div class="team-member-name">
-                       <h4 class="team-member-name-text">Name</h4>
-                       <p class="team-member-position">Attorney</p>
-                   </div>
-                   <div class="team-member-content">
-                       <div class="team-member-message">
-                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat beatae ipsa nemo quis explicabo natus asperiores atque, libero a assumenda voluptates..
-                       </div>
-                       <div class="team-member-button">
-                           <button class="team-member-profile-button">Profile</button>
-                       </div>
-                   </div>
+                            <img src="man2.jpg" alt="Team member image">
+                            <div class="team-member-name">
+                                <h4 class="team-member-name-text">Name</h4>
+                                <p class="team-member-position">Attorney</p>
+                            </div>
+                            <div class="team-member-content">
+                                <div class="team-member-message">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat beatae ipsa nemo quis explicabo natus asperiores atque, libero a assumenda voluptates..
+                                </div>
+                                <div class="team-member-button">
+                                    <button class="team-member-profile-button">Profile</button>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="team-member">
+                    <img src="man2.jpg" alt="Team member image">
+                    <div class="team-member-name">
+                        <h4 class="team-member-name-text">Name</h4>
+                        <p class="team-member-position">Attorney</p>
+                    </div>
+                    <div class="team-member-content">
+                        <div class="team-member-message">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat beatae ipsa nemo quis explicabo natus asperiores atque, libero a assumenda voluptates..
+                        </div>
+                        <div class="team-member-button">
+                            <button class="team-member-profile-button">Profile</button>
+                        </div>
+                    </div>
+                    </div>
                 </div>
             </div>
         </div>
 
         <!-- clients Section -->
         <div class="clients-section">
-            <div class="clients-section-header">
-                <h4 class="clients-header-text">
-                    Clients
-                </h4>
-            </div>
-            <div class="clients">
-                <div class="client-image">
-                    <img src="#" alt="clinet image logo">
+            <div class="inner-container">
+                <div class="clients-section-header">
+                    <h3 class="clients-header-text">
+                        Clients
+                    </h4>
                 </div>
-                <div class="client-image">
-                    <img src="#" alt="clinet image logo">
-                </div>
-                <div class="client-image">
-                    <img src="#" alt="clinet image logo">
-                </div>
-                <div class="client-image">
-                    <img src="#" alt="clinet image logo">
-                </div>
-                <div class="client-image">
-                    <img src="#" alt="clinet image logo">
+                <div class="clients">
+                    <div class="client-image">
+                        <img src="brand.jpg" alt="clinet image logo">
+                    </div>
+                    <div class="client-image">
+                        <img src="brand.jpg" alt="clinet image logo">
+                    </div>
+                    <div class="client-image">
+                        <img src="brand.jpg" alt="clinet image logo">
+                    </div>
+                    <div class="client-image">
+                        <img src="brand.jpg" alt="clinet image logo">
+                    </div>
+                    <div class="client-image">
+                        <img src="brand.jpg" alt="clinet image logo">
+                    </div>
                 </div>
             </div>
         </div>
