Completed the design

--- a/Index.html
+++ b/Index.html
@@ -264,40 +264,45 @@
         <!-- Footer area -->
         <div class="footer">
             <div class="footer-links">
-                <div class="footer-address">
-
+                <div class="footer-address ft">
+                    <p>Tehlipora</p>
+                    <p>Harran ganderbal</p>
+                    <p>Tel: 090009090909</p>
+                    <p>Mobile: 09876567</p>
                 </div>
-                <div class="footer-recent-posts">
-                    <ol>
-                        <li>1</li>
-                        <li>2</li>
-                        <li>3</li>
-                        <li>4</li>
-                        <li>5</li>
-                    </ol>
-                </div>
-                <div class="footer-attorneys">
-                    <ul>
-                        <li>1</li>
-                        <li>1</li>
-                        <li>2</li>
-                        <li>3</li>
-                        <li>4</li>
+                <div class="footer-recent-posts ft">
+                    <h3>Recent posts</h3>
+                    <ul type="none">
+                        <li>Hi to all</li>
+                        <li>None to all</li>
+                        <li>Some to all</li>
+                        <li>Every one to all</li>
+                        <li>Hi to all</li>
                     </ul>
                 </div>
-                <div class="footer-contact-form">
+                <div class="footer-attorneys ft">
+                    <h3>Attorneys</h3>
+                    <ul type="none">
+                        <li>Malla</li>
+                        <li>Shehzen</li>
+                        <li>Salma</li>
+                        <li>saima</li>
+                        <li>Tajamul</li>
+                    </ul>
+                </div>
+                <div class="footer-contact-form ft">
                     <form action="">
                         <div class="email-field">
                             <label for="email">
                                 Enter Email Address
-                            </label>
+                            </label><br>
                             <input type="email" name="email" class="footer-form-field">
                         </div>
                         <div class="question-field">
                             <label for="question">
                                 Ask Your Question
                             </label>
-                            <textarea type="email" name="email" class="footer-form-field"></textarea>
+                            <textarea type="email" name="email" class="footer-form-textfield"></textarea>
                         </div>
                         <button class="footer-form-button">Submit</button>
                     </form>
@@ -306,7 +311,7 @@
             <div class="footer-contact">
                 <div class="footer-contact-info">
                     <div class="copyright">
-                        Something
+                        Copyright &copy; shehzen
                     </div>
                     <div class="social-handles">
                         <div class="facebook">
