--- a/Index.html
+++ b/Index.html
@@ -17,17 +17,17 @@
                 </h1>
             </div>
             <ol class="navbar-items">
-                <li class="nav-item"><a href="" class="nav-links">Home</a></li>
-                <li class="nav-item"><a href="" class="nav-links">Features</a></li>
-                <li class="nav-item"><a href="" class="nav-links">Attorneys</a></li>
-                <li class="nav-item"><a href="" class="nav-links">Services</a></li>
+                <li class="nav-item"><a href="#home" class="nav-links">Home</a></li>
+                <li class="nav-item"><a href="#features" class="nav-links">Features</a></li>
+                <li class="nav-item"><a href="#attorneys" class="nav-links">Attorneys</a></li>
+                <li class="nav-item"><a href="#services" class="nav-links">Services</a></li>
                 <li class="nav-item"><a href="" class="nav-links">Blog</a></li>
-                <li class="nav-item"><a href="" class="nav-links">Contacts</a></li>
+                <li class="nav-item"><a href="#contacts" class="nav-links">Contacts</a></li>
             </ol>
         </div>
 
         <!-- main view / corosaul content -->
-        <div class="main-view-carosoul">
+        <div class="main-view-carosoul" id="home">
             <div class="carousal-message">
                 <h1>Qualified</h1>
                 <h3>Legal Advice</h3>
@@ -45,7 +45,7 @@
         </div>
 
         <!-- services cards section -->
-        <div class="services-section">
+        <div class="services-section" id="features">
             <div class="service-card">
                 <h1 class="card-service-title">
                     WYSIWYG Editor</h1>
@@ -86,7 +86,7 @@
         </div>
 
         <!-- download bar -->
-        <div class="download-bar">
+        <div class="download-bar" id="services">
             <div class="download-bar-message">
                 <h1 class="download-bar-message-title">
                     All people are equal before the law. A good atterney is what makes difference.
@@ -161,7 +161,7 @@
         </div>
 
         <!-- our team -->
-        <div class="teams-section">
+        <div class="teams-section" id="attorneys">
             <div class="inner-container">
                 <div class="teams-section-header">
                     <h3 class="teams-section-header-text">
@@ -262,7 +262,7 @@
         </div>
 
         <!-- Footer area -->
-        <div class="footer">
+        <div class="footer" id="contacts">
             <div class="footer-links">
                 <div class="footer-address ft">
                     <p>Tehlipora</p>
